--- a/src/components/stylesheet.css
+++ b/src/components/stylesheet.css
@@ -1,14 +1,19 @@
 h1 {
     text-align: center;
+    font-size: 1.5em;
+}
+h2 {
+    text-align: left;
+    font-size: 1em;
 }
 
 .video-wrapper {
     position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 30px;
-    height: 0;
-    border: 1px solid #d3d3d3;
+    /* border: 1px solid #d3d3d3; */
     overflow: hidden;
+    display: flex;
+    background-color: lightgray;
+    height: 100vh;
 }
 .video-wrapper iframe,
 .video-wrapper object,
@@ -20,3 +25,45 @@ h1 {
     height: 100%;
 }
 
+.header{
+    font-size: 24px;
+}
+
+input {
+    padding: 10px;
+    border-radius: 8px;
+    color: black;
+    font-size: 18px;
+    background-color: lightgray;
+    outline: none;
+    border: 50px;
+    margin: 5px;
+}
+
+.button {
+    padding: 10px;
+    border-radius: 8px;
+    color: white;
+    font-size: 18px;
+    outline:none;
+    border: 50px;
+    margin: 5px;
+
+}
+
+.button:hover {
+    box-shadow: 0px 0px 20px  rgba(0,0,0,4);
+    transition: background-color 0.5s ease;
+}
+
+  .button:active {
+    transform: translateY(4px);
+}
+
+.primary {
+    background: blue;
+  }
+
+  .secondary {
+    background: red;
+  }
