--- a/src/components/stylesheet.css
+++ b/src/components/stylesheet.css
@@ -5,11 +5,11 @@ h1 {
 h2 {
     text-align: left;
     font-size: 1em;
+    margin: 0;
 }
 
 .video-wrapper {
     position: relative;
-    /* border: 1px solid #d3d3d3; */
     overflow: hidden;
     display: flex;
     background-color: lightgray;
